5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_2723.log
== SUBMITION (2019-04-12 01:22:07) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.141179
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 01:22:39) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:23:58) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.124445
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 01:24:07) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:26:31) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.193096
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 01:27:38) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:27:45) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.203707
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 01:27:59) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:28:16) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
					print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.204801
-- ERROR:
  File "/home/codebench/codes/1650/2723/main.py", line 26
    print(c)	
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:29:29) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.150594
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:32:08) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.14363
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:43:17) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.114402
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:43:23) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a)
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.152312
-- ERROR:
  File "/home/codebench/codes/1650/2723/main.py", line 28
    if(c>a)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 01:43:29) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.128743
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:57:11) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.221246
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:59:10) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.137823
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:59:13) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.134331
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:21:54) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.141434
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:02:52) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:03:17) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.226565
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:32:21) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:32:46) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.144666
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:57:42) 
-- CODE:
a=float(input("num1    "))
b=float(input("num2    "))
c=float(input("num3    "))
if(a>b):
	if(a>c):
		print(a)
	else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)
		else:
			if(c>a):
				if(c>b):
					print(c)
else:
		if(b>a):
			if(b>c):
				print(b)
			else:
				if(c>a):
					if(c>b):
						print(c)	
		else:
			if(c>a):
				if(c>b):
					print(c)
-- EXECUTION TIME:
0.104212
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
